--- a/admin/views/accounts/edit.haml
+++ b/admin/views/accounts/edit.haml
@@ -12,4 +12,4 @@
       -form_for :account, url(:accounts, :update, :id => @account.id), :method => :put, :class => :form do |f|
         =partial "accounts/form", :locals => { :f => f }
 
--content_for :sidebar, partial("base/sidebar")
+-content_for :sidebar, partial("base/textile")
