--- a/admin/views/accounts/new.haml
+++ b/admin/views/accounts/new.haml
@@ -11,4 +11,4 @@
       -form_for :account, url(:accounts, :create), :class => :form do |f|
         =partial "accounts/form", :locals => { :f => f }
 
--content_for :sidebar, partial("base/sidebar")
+-content_for :sidebar, partial("base/textile")
