--- a/admin/views/page_labels/_form.haml
+++ b/admin/views/page_labels/_form.haml
@@ -2,13 +2,13 @@
   =f.label :name
   =f.error_message_on :name
   =f.text_field :name, :class => :text_field
-  %span.description Ex: name of the label
+  %span.description _htmlname of the label
 
 .group
   =f.label :description
   =f.error_message_on :description
   =f.text_field :description, :class => :text_field
-  %span.description Ex: a simple description
+  %span.description _htmla simple description
 
 
 .group.navform.wat-cf
