--- a/app/views/pages/show.haml
+++ b/app/views/pages/show.haml
@@ -2,7 +2,7 @@
   -if @page
     -title @page.title
     %h1=@page.title
-    .content~@page.body_formatted
+    .content~@page.body_html
   -else
     %h1 Page not found
     .content The page requested is not available
