--- a/public/stylesheets/padrino.css
+++ b/public/stylesheets/padrino.css
@@ -6,6 +6,10 @@ h2{font-weight:normal;border-top:4px solid #CFCFCF;padding-top:15px;}
 h3{font-weight:normal;}
 p{margin-top:10px;margin-bottom:10px;}
 ins{text-decoration:underline;}
+ul.team {list-style-type:none;margin:40px 0;padding:0px;}
+ul.team li{margin:20px 0;padding:0px;float:left;}
+ul.team .avatar{border:2px solid #CFCFCF;padding:3px;float:left;}
+ul.team .description{float:left;padding-left:20px;width:340px;}
 #dsq-content{border-top:1px solid #222;padding-top:15px;margin-top:30px;}
 #dsq-content h3{font-weight:bold;}
 #header{border-bottom:2px solid #222222;}
