--- a/admin/views/categories/_form.haml
+++ b/admin/views/categories/_form.haml
@@ -2,7 +2,7 @@
   =f.label :name
   =f.error_message_on :name
   =f.text_field :name, :class => :text_field
-  %span.description _htmlname of category
+  %span.description name of category
 
 
 .group.navform.wat-cf
