--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,7 +11,7 @@
   %body
     .container_16
       #header.grid_16
-        .grid_5.alpha=link_to image_tag("padrino.jpg", :alt => key_density), url(:base, :index)
+        .grid_5.alpha=link_to image_tag("padrino.jpg", :alt => key_density, :height => 100), url(:base, :index)
         .grid_11.omega
           %ul.menu
             %li=link_to "HOME", url(:base, :index)
