--- a/public/stylesheets/padrino.css
+++ b/public/stylesheets/padrino.css
@@ -33,7 +33,7 @@ h1.slogan{margin:40px 0px 40px 0px;font-size:24px;text-align:right;}
 .highlight{background-color:#ffff88;font-weight:bold;color:#36393d;}
 .align-right{text-align:right;}
 .text_field{border:1px solid #3D3D3D;padding:5px;}
-.button{border:1px solid #3D3D3D;color:#DFDAD9;background-color:#333333;padding:5px;cursor:pointer;}
+.button{border:1px solid #3D3D3D;color:#DFDAD9;background-color:#333333;text-align:center;width:64px;height:25px;cursor:pointer;}
 .border-top{border-top:4px solid #CFCFCF;margin-top:10px;padding-top:10px;height:100%;}
 .pagination{text-align:right;margin-top:20px;}
 .pagination .page{border:1px solid #222222;padding:0px 5px 0px 5px;margin-left:3px;}
