* Finally (I hope), fixed problems with IE and TopUp, if there is any JS guru fix only latest effect "appear".
* Improved effects of topup and added shaded to key features.

* Added padding to search field, now (also thanks to D3XT3R) same height of search button.

We only have a layout problem with disqus and IE6 but I think is not a big deal.

--- a/app/views/base/index.haml
+++ b/app/views/base/index.haml
@@ -6,7 +6,7 @@
 .grid_4.omega
   %ul.features
     -Page.find_all_labeled(:home_feature).each_with_index do |feature, i|
-      %li=link_to feature.title.upcase, :anchor => feature.id, :toptions => "width = 600, type = dom, resizable = 0", :class => (:alternate if i%2==0)
+      %li=link_to feature.title.upcase, :anchor => feature.id, :toptions => "width=600, type=dom, resizable=0, effect=show, shaded=1", :class => (:alternate if i%2==0)
 .clear
 
 -Page.find_all_labeled(:home_feature).each do |feature|
@@ -15,12 +15,12 @@
     ~feature.body_html
 
 .screens
-  =link_to image_tag("screens.jpg", :alt => "Padrino Admin", :height => 302), image_path("login.png"), :toptions => "effect = appear, group = screenshoots", :class => :top_up
+  =link_to image_tag("screens.jpg", :alt => "Padrino Admin", :height => 302), image_path("login.png"), :toptions => "effect=show, group=screenshoots"
   %br
   =Page.find_labeled(:home_admin).try(:body_html)
 
-=link_to image_tag("dashboard.png", :alt => "Dashboard Page"), image_path("dashboard.png"), :toptions => "effect = appear, group = screenshoots", :style => "display:none"
-=link_to image_tag("index.png", :alt => "Index Page"), image_path("index.png"), :toptions => "effect = appear, group = screenshoots", :style => "display:none"
+=link_to image_tag("dashboard.png", :alt => "Dashboard Page"), image_path("dashboard.png"), :toptions => "effect=show, group=screenshoots", :style => "display:none"
+=link_to image_tag("index.png", :alt => "Index Page"), image_path("index.png"), :toptions => "effect=appear, group=screenshoots", :style => "display:none"
 
 .margin-top~Page.find_labeled(:home).try(:body_html)
 
