--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,7 +5,7 @@
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html', :name => "description", :content => description}
     %link{:href => url(:blog, :rss), :rel => :alternate, :title => :rss, :type => "application/rss+xml"}
     =stylesheet_link_tag "reset", "text", "960", "highlighter", "padrino"
-    =javascript_include_tag "top_up"
+    =javascript_include_tag "top_up-min"
     -if Padrino.env == :development
       %script{:type => "text/javascript"} var disqus_developer = 1;
   %body
