* Improved al little our SEO rulez

--- a/app/views/guides/show.haml
+++ b/app/views/guides/show.haml
@@ -1,6 +1,7 @@
 .grid_12.alpha.margin-top
   -if @guide
-    -title @guide.title
+    -title "Guides", @guide.title
+    -description @guide.body_html
     %h1=@guide.title
     .content~@guide.body_html
     #disqus_thread
