--- a/app/views/blog/index.haml
+++ b/app/views/blog/index.haml
@@ -4,6 +4,7 @@
     %h1 No Posts Found
     .content The post requested is not available
   -else
+    -description @posts.map(&:summary_html).join(" ")
     -@posts.each_with_index do |post, i|
       %h1{:class => ("border-top" if i!=0)}
         =link_to highlight(post.title, @search), url(:blog, :show, :id => post), :unless => post.body.blank?
