--- a/public/stylesheets/padrino.css
+++ b/public/stylesheets/padrino.css
@@ -43,7 +43,7 @@ h1.slogan{margin:40px 0px 40px 0px;font-size:24px;text-align:right;}
 .pagination .page{border:1px solid #222222;padding:0px 5px 0px 5px;margin-left:3px;}
 .pagination .current{border:1px solid #222222;padding:0px 5px 0px 5px;margin-left:3px;color:#DFDAD9;background-color:#333333}
 .container_16 table th{padding:5px 10px 5px 10px;border-bottom:2px solid #CFCFCF; text-align:left;}
-.container_16 table td{padding:5px 10px 5px 10px;border-bottom:1px solid #CFCFCF;}
+.feature td,.container_16 table td{padding:5px 10px 5px 10px;border-bottom:1px solid #CFCFCF;}
 .feature{padding:10px;background-color:#FFF;}
 /* Debug */
 /*.container_16 {background: #fff url(/images/16_col.gif) repeat-y;*/
