--- a/public/stylesheets/padrino.css
+++ b/public/stylesheets/padrino.css
@@ -24,7 +24,7 @@ ul.features a:hover{color:#000;text-decoration:none;}
 ul.features li{padding:0px;margin:0px;}
 h1.slogan{margin:40px 0px 40px 0px;font-size:24px;text-align:right;}
 .content{margin-bottom:12px;}
-.content a{color:#F03B45;}
+.content a, .feature a{color:#F03B45;}
 .bordered{border:1px solid red;}
 .margin-top{margin-top:20px;}
 .short-code{padding-top:20px;font-family:'DejaVu Sans Mono','Bitstream Vera Sans Mono','Courier','Terminal',monospace;font-size:13px;}
