--- a/admin/views/layouts/application.haml
+++ b/admin/views/layouts/application.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}
     %title Padrino Admin
-    =stylesheet_link_tag :base, :override, "themes/default/style"
+    =stylesheet_link_tag :base, "themes/default/style"
   %body
     #container
       #header
