--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -7,7 +7,7 @@
     =stylesheet_link_tag "reset", "text", "960", "highlighter", "padrino"
     =javascript_include_tag "top_up-min"
     -if Padrino.env == :development
-      %script{:type => "text/javascript"} var disqus_developer = 1;
+      %script{:type => "text/javascript"} var disqus_developer = 1; var disqus_skip_auth = true;
   %body
     .container_16
       #header.grid_16
