--- a/public/stylesheets/padrino.css
+++ b/public/stylesheets/padrino.css
@@ -10,8 +10,8 @@ ul.team {list-style-type:none;margin:40px 0;padding:0px;}
 ul.team li{margin:20px 0;padding:0px;float:left;}
 ul.team .avatar{border:2px solid #CFCFCF;padding:3px;float:left;}
 ul.team .description{float:left;padding-left:20px;width:340px;}
-#dsq-content{border-top:1px solid #222;padding-top:15px;margin-top:30px;}
-#dsq-content h3{font-weight:bold;}
+#dsq-content{border:1px solid #CFCFCF;border-top:4px solid #CFCFCF;padding:15px 10px;margin-top:30px;background-color:#EEEEEE;}
+#dsq-content h3{font-weight:bold;font-size:14px;margin-bottom:5px;}
 #header{border-bottom:2px solid #222222;}
 #footer{border-top:2px solid #222222; text-align:right;padding:5px 0px 20px 0px;margin-top:20px;}
 ul.menu{margin-top:80px;font-size:16px;float:right;list-style-type:none;margin:0px;margin-top:75px;}
