Fixed height also for sidebar.

--- a/admin/views/base/_textile.haml
+++ b/admin/views/base/_textile.haml
@@ -1,6 +1,6 @@
 .block
   %h3 Textile Reference
-  .content
+  .content.textile
     %h4 Internal Links
     %p [[Page Title]]
     %h4 Code Highlighting
