--- a/app/views/base/team.haml
+++ b/app/views/base/team.haml
@@ -1,6 +1,10 @@
 -title "Team"
 %h1.margin-top Padrino Team
-.content Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+.content
+  Padrino exists because of these members. each of us has committed our time and effort in the creation 
+  and perfection of the project. The team consists of DAddyE, D3xt3R, Yortz on the Italian side 
+  and Arthur and Nathan from the US. Because of their joint effort, Padrino has come into existence!
+  
 %ul.team
   -Account.all.each do |account|
     %li
