updated team statement and added team link to main

--- a/app/views/base/team.haml
+++ b/app/views/base/team.haml
@@ -1,9 +1,9 @@
 -title "Team"
 %h1.margin-top Padrino Team
 .content
-  Padrino exists because of these members. each of us has committed our time and effort in the creation 
-  and perfection of the project. The team consists of DAddyE, D3xt3R, Yortz on the Italian side 
-  and Arthur and Nathan from the US. Because of their joint effort, Padrino has come into existence!
+  Padrino exists because of these members. each of them has committed their time and effort in the creation 
+  and improvement of this project. The team consists of programmers all over, such as Italy and the US.
+  Because of their hard work, Padrino has come into existence!
   
 %ul.team
   -Account.all.each do |account|
