--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -15,6 +15,7 @@
         .grid_11.omega
           %ul.menu
             %li=link_to "BLOG", url(:blog, :index)
+            %li=link_to "TEAM", url(:base, :team)
             %li=link_to "CHANGES", url(:base, :changes)
             %li=link_to "GUIDES", url(:guides, :index)
             %li=link_to "CODE", "http://github.com/padrino/padrino-framework", :target => :_blank
