Removed margin from team h3 Use a page for easily editing team text Added a check box "team" in our account section Link to the home page only :unless => home_page.blank?

--- a/admin/views/accounts/_form.haml
+++ b/admin/views/accounts/_form.haml
@@ -41,11 +41,16 @@
   %span.description their role
 
 .group
+  =f.label :team
+  =f.error_message_on :team
+  =f.check_box :team
+  %span.description is a team member?
+
+.group
   =f.label :description
   =f.error_message_on :description
   =f.text_area :description, :class => "text_area code", :style => "height:200px"
   %span.description a small biography
-
 
 .group.navform.wat-cf
   =f.submit pat(:save), :class => :button
