--- a/public/stylesheets/padrino.css
+++ b/public/stylesheets/padrino.css
@@ -10,6 +10,7 @@ ul.team {list-style-type:none;margin:40px 0;padding:0px;}
 ul.team li{margin:20px 0;padding:0px;float:left;}
 ul.team .avatar{border:2px solid #CFCFCF;padding:3px;float:left;}
 ul.team .description{float:left;padding-left:20px;width:340px;}
+ul.team .description h3{margin:0px;}
 #dsq-content{border:1px solid #CFCFCF;border-top:4px solid #CFCFCF;padding:15px 10px;margin-top:30px;background-color:#EEEEEE;}
 #dsq-content h3{font-weight:bold;font-size:14px;margin-bottom:5px;}
 #header{border-bottom:2px solid #222222;}
