Added Api section. I updated also padrino-framework/Rakefile for autopublish on our server, I will push it when our site is officially online so other can't found our "beta" site.

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -16,6 +16,7 @@
           %ul.menu
             %li=link_to "BLOG", url(:blog, :index)
             %li=link_to "GUIDES", url(:guides, :index)
+            %li=link_to "API", url(:base, :api)
             %li=link_to "CODE", "http://github.com/padrino/padrino-framework", :target => :_blank
             %li=link_to "CHANGES", url(:base, :changes)
             %li=link_to "TEAM", url(:base, :team)
