--- a/admin/views/accounts/_form.haml
+++ b/admin/views/accounts/_form.haml
@@ -49,7 +49,7 @@
 .group
   =f.label :description
   =f.error_message_on :description
-  =f.text_area :description, :class => "text_area code", :style => "height:200px"
+  ~f.text_area :description, :class => "text_area code", :style => "height:200px"
   %span.description a small biography
 
 .group.navform.wat-cf
