--- a/public/stylesheets/padrino.css
+++ b/public/stylesheets/padrino.css
@@ -1,9 +1,9 @@
 body{font-family:Georgia;color:#222222;}
 a{color:#222222;text-decoration:none;}
 a:hover{text-decoration:underline;color:#3D3D3D;}
-h1{font-weight:normal;font-size:26px;}
-h2{font-weight:normal;border-top:4px solid #CFCFCF;padding-top:15px;}
-h3{font-weight:normal;}
+h1{font-size:26px;}
+h2{border-top:4px solid #CFCFCF;padding-top:15px;}
+h1,h2,h3,h4,h5,h6{font-weight:normal;}
 p{margin-top:10px;margin-bottom:10px;}
 ins{text-decoration:underline;}
 ul.team {list-style-type:none;margin:40px 0;padding:0px;}
