--- a/admin/views/guides/index.haml
+++ b/admin/views/guides/index.haml
@@ -8,23 +8,25 @@
       =pat(:all)
       =mt(:guide)
     .inner
-      %table.table
-        %tr
-          %th.first=mat(:guide, :title)
-          %th=mat(:guide, :link)
-          %th=mat(:guide, :draft)
-          %th=mat(:guide, :created_at)
-          %th.last="&nbsp;"
-        -@guides.each do |guide|
+      %table.table.sortable
+        %thead
           %tr
-            %td.first=guide.title
-            %td=link_to PadrinoWeb.url(:guides, :show, :id => guide), PadrinoWeb.url(:guides, :show, :id => guide), :target => :_blank
-            %td=guide.draft? ? "Yes" : "No"
-            %td=l(guide.updated_at, :format => :short)
-            %td.last
-              =button_to pat(:edit), url(:guides, :edit, :id => guide.id), :method => :get, :class => :button_to 
-              ="|"
-              =button_to pat(:delete), url(:guides, :destroy, :id => guide.id), :method => :delete, :class => :button_to
+            %th.first=mat(:guide, :title)
+            %th=mat(:guide, :link)
+            %th=mat(:guide, :draft)
+            %th=mat(:guide, :created_at)
+            %th.last="&nbsp;"
+        %tbody
+          -@guides.each do |guide|
+            %tr[guide]
+              %td.first=guide.title
+              %td=link_to PadrinoWeb.url(:guides, :show, :id => guide), PadrinoWeb.url(:guides, :show, :id => guide), :target => :_blank
+              %td=guide.draft? ? "Yes" : "No"
+              %td=l(guide.updated_at, :format => :short)
+              %td.last
+                =button_to pat(:edit), url(:guides, :edit, :id => guide.id), :method => :get, :class => :button_to
+                ="|"
+                =button_to pat(:delete), url(:guides, :destroy, :id => guide.id), :method => :delete, :class => :button_to
       .actions-bar.wat-cf
         .actions="&nbsp;"
 
