--- a/admin/views/layouts/application.haml
+++ b/admin/views/layouts/application.haml
@@ -4,6 +4,9 @@
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}
     %title Padrino Admin
     =stylesheet_link_tag :base, "themes/default/style"
+    =javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"
+    =javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"
+    =javascript_include_tag :application
   %body
     #container
       #header
@@ -24,7 +27,7 @@
           #footer
             .block
               %p
-                Copyright © 
+                Copyright ©
                 =Time.now.year
                 =link_to "Padrino v.#{Padrino.version}", "http://padrino.github.com", :target => :_blank
         #sidebar=yield_content :sidebar
