--- a/admin/views/pages/index.haml
+++ b/admin/views/pages/index.haml
@@ -9,25 +9,27 @@
       =pat(:all)
       =mt(:page)
     .inner
-      %table.table
-        %tr
-          %th.first=mat(:page, :title)
-          %th=mat(:page, :label)
-          %th=mat(:page, :link)
-          %th=mat(:page, :draft)
-          %th=mat(:page, :created_at)
-          %th.last="&nbsp;"
-        -@pages.each do |page|
+      %table.table.sortable
+        %thead
           %tr
-            %td.first=page.title
-            %td=page.label.name
-            %td=link_to PadrinoWeb.url(:pages, :show, :id => page), PadrinoWeb.url(:pages, :show, :id => page), :target => :_blank
-            %td=page.draft? ? "Yes" : "No"
-            %td=l(page.updated_at, :format => :short)
-            %td.last
-              =button_to pat(:edit), url(:pages, :edit, :id => page.id), :method => :get, :class => :button_to 
-              ="|"
-              =button_to pat(:delete), url(:pages, :destroy, :id => page.id), :method => :delete, :class => :button_to
+            %th.first=mat(:page, :title)
+            %th=mat(:page, :label)
+            %th=mat(:page, :link)
+            %th=mat(:page, :draft)
+            %th=mat(:page, :created_at)
+            %th.last="&nbsp;"
+        %tbody
+          -@pages.each do |page|
+            %tr[page]
+              %td.first=page.title
+              %td=page.label.name
+              %td=link_to PadrinoWeb.url(:pages, :show, :id => page), PadrinoWeb.url(:pages, :show, :id => page), :target => :_blank
+              %td=page.draft? ? "Yes" : "No"
+              %td=l(page.updated_at, :format => :short)
+              %td.last
+                =button_to pat(:edit), url(:pages, :edit, :id => page.id), :method => :get, :class => :button_to
+                ="|"
+                =button_to pat(:delete), url(:pages, :destroy, :id => page.id), :method => :delete, :class => :button_to
       .actions-bar.wat-cf
         .actions="&nbsp;"
 
