--- a/public/admin/stylesheets/base.css
+++ b/public/admin/stylesheets/base.css
@@ -93,3 +93,4 @@ ul.list li .item .avatar{float:left;margin:0 5px 5px 0;width:30px;height:30px;}
 /* custom */
 .content.textile{height:600px;overflow-y:auto;}
 .code{font-family: Courier, 'Courier New', monospace;color:#36393D;}
+table.sortable tbody tr{cursor:url(/admin/images/slide.cur), move;}
