--- a/app/views/base/team.haml
+++ b/app/views/base/team.haml
@@ -1,6 +1,7 @@
 -title "Team"
+-description @team_page.try(:body_html)
 %h1.margin-top Padrino Team
-.content~Page.find_labeled(:team).try(:body_html)
+.content~@team_page.try(:body_html)
 %ul.team
   -@team.each do |account|
     %li
