--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -40,6 +40,16 @@
         .clear
       .clear
     :javascript
+      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    :javascript
+      try {
+      var pageTracker = _gat._getTracker("UA-12939205-1");
+      pageTracker._setDomainName("none");
+      pageTracker._setAllowLinker(true);
+      pageTracker._trackPageview();
+      } catch(err) {}</script>
+    :javascript
       (function() {
         var links = document.getElementsByTagName('a');
         var query = '?';
@@ -50,9 +60,3 @@
         }
         document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/padrinorb/get_num_replies.js' + query + '"></' + 'script>');
       })();
-      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-      try {
-      var pageTracker = _gat._getTracker("UA-12939205-1");
-      pageTracker._trackPageview();
-      } catch(err) {}
