--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -48,7 +48,7 @@
       pageTracker._setDomainName("none");
       pageTracker._setAllowLinker(true);
       pageTracker._trackPageview();
-      } catch(err) {}</script>
+      } catch(err) {}
     :javascript
       (function() {
         var links = document.getElementsByTagName('a');
