--- a/app/views/blog/index.haml
+++ b/app/views/blog/index.haml
@@ -17,7 +17,7 @@
         by
         =post.author.full_name
         ="|"
-        =time_ago_in_words(post.created_at || Time.now) + ' ago'
+        =time_ago_in_words(post.updated_at || Time.now) + ' ago'
         ="|"
         =link_to "0 Comments", url(:blog, :show, :id => post), :anchor => "disqus_thread"
     .pagination=paginate(@posts, :blog, :index)
