Guys, here a lot of changes for a 0.9.11 version that we can share ongithub.
* 0.9.11 compat
* disquis lib
* mongomapper 0.8.0 (I LOVE LOVE LOVE IT)
* new beautiful notifier (I LOVE LOVE LOVE IT)
* readme (must be polished/improved)

Can you confirm that with $ padrino rake seed you get every thing correctly populated?

Thanks so much!

--- a/admin/views/mailers/notifier/registration.erb
+++ b/admin/views/mailers/notifier/registration.erb
@@ -7,7 +7,7 @@ These are your login data:
 email: <%= account.email %>
 password: <%= account.password_clean %>
 
-url: <%= Notifier.base_url %><%= Admin.url(:sessions, :new) %>
+url: <%= Admin.domain %>/admin
 
 ---
 Best Regards
