--- a/admin/views/mailers/page/added.erb
+++ b/admin/views/mailers/page/added.erb
@@ -2,7 +2,7 @@ Hi,
 
 <%= page.author.full_name %> created a page "<%= page.title %>"
 
-you can see it here: <%= Notifier.base_url %><%= PadrinoWeb.url(:pages, :show, :id => page) %>
+you can see it here: <%= Admin.domain %><%= PadrinoWeb.url(:pages, :show, :id => page) %>
 
 ---
 Best Regards
