--- a/app/views/blog/_sidebar.haml
+++ b/app/views/blog/_sidebar.haml
@@ -12,6 +12,7 @@
     %li='Author ' + @post.author.full_name
     %li='Posted ' + time_ago_in_words(@post.updated_at || Time.now) + ' ago'
     %li=link_to '0 Comments', :anchor => :disqus_thread
+    =disqus_comment_counts
 
 %h3 Links
 %ul
