--- a/app/views/guides/show.haml
+++ b/app/views/guides/show.haml
@@ -4,11 +4,7 @@
     -description @guide.body_html
     %h1=@guide.title
     .content~@guide.body_html
-    #disqus_thread
-    %script{ :type => "text/javascript", :src => "http://disqus.com/forums/padrinorb/embed.js" }
-    %noscript
-      %a{ :href => "http://disqus.com/forums/padrinorb/?url=ref" }
-        View the discussion thread.
+    =disqus_thread
   -else
     %h1 Guide not found
     .content The guide requested is not available
