--- a/admin/views/mailers/guide/edited.erb
+++ b/admin/views/mailers/guide/edited.erb
@@ -2,11 +2,14 @@ Hi,<br />
 <br />
 <%= guide.author.full_name %> edited a guide "<%= guide.title %>"<br />
 <br />
-you can see it here: <%= Notifier.base_url %><%= PadrinoWeb.url(:guides, :show, :id => guide) %><br />
+you can see it here: <%= Admin.domain %><%= PadrinoWeb.url(:guides, :show, :id => guide) %><br />
 <br />
 <%= %w(title body).map { |key|
     if diff = guide.diff(key)
       "<div style=\"font-weight:bold\">#{key.humanize}</div>" +
       Albino.colorize(diff, :diff, :html, :linenos => :table, :noclasses => true)
     end
-}.compact.join("\n") %>
+}.compact.join("\n") %><br /><br />
+---<br />
+Best Regards<br />
+Padrino Team
