--- a/admin/views/mailers/post/edited.erb
+++ b/admin/views/mailers/post/edited.erb
@@ -2,7 +2,7 @@ Hi,<br />
 <br />
 <%= post.author.full_name %> edited a post "<%= post.title %>"<br />
 <br />
-you can see it here: <%= Notifier.base_url %><%= PadrinoWeb.url(:blog, :show, :id => post) %><br />
+you can see it here: <%= Admin.domain %><%= PadrinoWeb.url(:blog, :show, :id => post) %><br />
 <br />
 <%= %w(title summary body).map { |key|
     if diff = post.diff(key)
@@ -10,3 +10,6 @@ you can see it here: <%= Notifier.base_url %><%= PadrinoWeb.url(:blog, :show, :i
       Albino.colorize(diff, :diff, :html, :linenos => :table, :noclasses => true)
     end
 }.compact.join("\n") %>
+---<br />
+Best Regards<br />
+Padrino Team
