--- a/app/views/blog/index.haml
+++ b/app/views/blog/index.haml
@@ -21,6 +21,6 @@
         ="|"
         =link_to "0 Comments", url(:blog, :show, :id => post), :anchor => "disqus_thread"
     .pagination=paginate(@posts, :blog, :index)
-
+    =disqus_comment_counts
 .grid_4.omega.margin-top=partial "blog/sidebar"
 .clear
