--- a/app/views/blog/show.haml
+++ b/app/views/blog/show.haml
@@ -6,10 +6,6 @@
     .content
       ~@post.summary_html
       ~@post.body_html
-    #disqus_thread
-    %script{ :type => "text/javascript", :src => "http://disqus.com/forums/padrinorb/embed.js" }
-    %noscript
-      %a{ :href => "http://disqus.com/forums/padrinorb/?url=ref" }
-        View the discussion thread.
+    =disqus_thread
 .grid_4.omega.margin-top=partial "blog/sidebar"
 .clear
