Added link to code.

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -13,6 +13,7 @@
         .grid_5.alpha=link_to image_tag("padrino.jpg", :alt => key_density, :height => 100), url(:base, :index)
         .grid_11.omega
           %ul.menu
+            %li=link_to "CODE", "https://github.com/padrino/padrino-framework"
             %li=link_to "BLOG", url(:blog, :index)
             %li=link_to "GUIDES", url(:guides, :index)
             %li=link_to "API", url(:base, :api), :target => :_blank
